1.10.1:
* btc.VerifyKeyPair() alos does Schnorr sign/verify on the given key pair
* Wallet: Make SchnorrSign nonce dependent not only on RNG but also on the hash being signed

1.10.0 - 2021-12-16
* Added Taproot support
* Wallet: New config/command line switch "minsig", to enforce ECDSA creation of signatures without the extra byte
* Client: Force sending invs immediatelly, if a new inv is MSG_BLOCK type (for faster blocks propagation)
* Client: Refactored peers DB management and handling of "addr" messages, added address flood protection
* Package "lib/others/peersdb" moved to "client/network/peersdb"
* Client/WebUI/Miners: Shows strings inside conbase tx for mined blocks
* Client: Ignore "cmpctblock" messages when chain not in sync
* Client: Do not connect to friends in single connection mode
* Lib: Fix for a possible crash upon receiving a corrupt block (thx @lopp)
* Client/TextUI: Added Taproot support to "richest" and "maxouts" commands
* Wallet: For each listed segwit deposit address, extend the label with the reference to its P2KH address
* Client/WebUI: SSL server binds to TCP port 14433 in testnet mode
* Client: BlockDB can work with new "blNNNNNNNN.dat" filenames, as well as the old "blockchain-NNNNNNNN.dat"
* Tools/bdb - new command "-rendat" to rename old "blockchain-NNNNNNNN.dat" to new "blNNNNNNNN.dat" 
* Client: Added parallel updating of UTXO database by splitting it into 256 smaller hash-maps
* Wallet: Default change address (if not specified) does not convert to P2KH anymore

1.9.9 - 2021-05-21
 * Client: Do not drop Authorized peers
 * Client: Default value for config's "TXPool.MaxSizeMB" changed from 100 to 300
 * Lib: Chain.GetRawTx() does not return segwit-stripped data anymore
 * Wallet: fixed problem with "Transaction ID mismatch" error for segwit-stripped txs (now should work with either)
 * Wallet: decoding a transaction also displays its fee's SPB (when possible)