@@ -21,7 +21,8 @@
 # BIP32 Key Derivation Path (to the 1st key)
 # Default is m/0'
 # Example paths for known wallet implementations:
-#  m/0/0 - Electrum
+#  m/0/0 - Electrum receiving addresses
+#  m/1/0 - Electrum change addresses
 #  m/0'/0'/0' - Bitcoin Core
 #  m/0'/0/0 - Multibit HD, BRD Wallet
 #  m/44'/0'/0'/0 - Coinomi, Ledger
